--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
                                     Daniel is a Rising Freshman at Carnegie Mellon's School of Computer Science. He is a former Co-captain of Thomas Jefferson's Senior Computer Team and an officer of Thomas Jefferson's Computer Security Club. 
                                     <br>
                                     <br>
-                                    Daniel is an experienced competitor and has won many competitions including MIT battlecode, winning $2000 from UMD's high school programming contest, UPenn's Pclassic, Berkley's Calico, etc. He also has an extensive competitive math background including being an AIME qualifier and ARML participant.
+                                    Daniel is an experienced competitor and has won many competitions including MIT battlecode, winning $2000 from UMD's high school programming contest, UPenn's Pclassic, Berkeley's Calico, etc. He also has an extensive competitive math background including being an AIME qualifier and ARML participant.
                                     <br>
                                     <br>
                                     He also has extensive teaching experience from tutoring at multiple organizations and being chosen by his counselor to tutor computer science to those struggling in CS at TJ.
@@ -169,7 +169,7 @@
                                     <br><br>
                                     He has extensive leadership/teaching experience from mentoring at TJ and Longfellow's Science Olympiad clubs, years of leadership in Boy Scouts, and tutoring (up to college level) on the side.
                                     <br><br>
-                                    He has strong academic competition experience - qualifying for National Science Olympiad several times, becoming a Candidate Master on Codeforces, winning MIT Battlecode and PClassic, 3rd place at HackMIT Blueprint, and being a top competition math competitor since middle school.
+                                    He has strong academic competition experience - qualifying for National Science Olympiad several times, becoming a Candidate Master on Codeforces, winning MIT Battlecode and PClassic, 3rd place at HackMIT Blueprint, and being an A-team math competitor since middle school.
                                     <br><br>
                                     He enjoys playing games like Tetris and Mahjong (without gambling).
                                 </p>
