--- a/about.html
+++ b/about.html
@@ -95,9 +95,11 @@
                                     <br>
                                     Munir is a first-year student at Purdue University.
                                     <br><br>
-                                    Munir reached the Platinum division of the USA Computing Olympiad (USACO), and has won programming contests at UPenn and UMD. He has experience teaching as an officer of TJHSST's Senior Computer Team and as a TA for a Summer Foundations of Computer Science class.
+                                    Munir reached the Platinum division of the USA Computing Olympiad (USACO), and has won programming contests at UPenn and UMD. He loves groupwriting and groupsolving problems.
                                     <br><br>
-                                    Munir enjoys reading fiction and collecting riddles.
+                                    Munir has experience teaching as a TJHSST Senior Computer Team officer, a one-time Competitive Programming Initiative instructor, and a Summer Foundations of Computer Science TA.
+                                    <br><br>
+                                    Munir enjoys reading fiction and collecting riddles. 
                                     <br>
                                 </p>
                             </div>
