--- a/courses.html
+++ b/courses.html
@@ -206,12 +206,12 @@
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 22 - August 2 <br>All Weekdays</th>
                                                         <td class="py-2">4:00-5:30 PM EST</td>
-                                                        <td class="py-2">$225</td>
+                                                        <td class="py-2">$225 ($15/hr)</td>
                                                     </tr>
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">August 5 - August 16 <br>All Weekdays</th>
                                                         <td class="py-2">4:00-5:30 PM EST</td>
-                                                        <td class="py-2">$225</td>
+                                                        <td class="py-2">$225 ($15/hr)</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -308,13 +308,13 @@
                                                 <tbody>
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 22 - August 2 <br>All Weekdays</th>
-                                                        <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">$225</td>
+                                                        <td class="py-2">5:45-7:15 PM EST</td>
+                                                        <td class="py-2">$225 ($15/hr)</td>
                                                     </tr>
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">August 5 - August 16 <br>All Weekdays</th>
-                                                        <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">$225</td>
+                                                        <td class="py-2">5:45-7:15 PM EST</td>
+                                                        <td class="py-2">$225 ($15/hr)</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -352,8 +352,8 @@
                                                 <tbody>
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 23 - August 17 <br>Tuedays & Saturdays</th>
-                                                        <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">$180</td>
+                                                        <td class="py-2">7:30-9:00 PM EST</td>
+                                                        <td class="py-2">$180 ($15/hr)</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -394,8 +394,8 @@
                                                 <tbody>
                                                     <tr class="table-secondary">
                                                         <th class="py-2" scope="row">July 25 - August 18 <br>Thursdays & Sundays</th>
-                                                        <td class="py-2">6:00-7:30 PM EST</td>
-                                                        <td class="py-2">$180</td>
+                                                        <td class="py-2">7:30-9:00 PM EST</td>
+                                                        <td class="py-2">$180 ($15/hr)</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
