--- a/courses.html
+++ b/courses.html
@@ -154,7 +154,7 @@
                         <ul class="nav nav-tabs" role="tablist">
                             <li class="nav-item" role="presentation">
                                 <a class="nav-link py-2 px-3 hover-purple active" data-bs-toggle="tab" href="#intro-alg" aria-selected="false" role="tab" tabindex="-1">
-                                    • Algebra
+                                    • Algebra 1
                                 </a>
                             </li>
                             <li class="nav-item" role="presentation">
