--- a/index.html
+++ b/index.html
@@ -68,7 +68,102 @@
                     </div>
                 </div>
             </div>
-
+            
+            <div class="container">
+                <div hidden class="card mw-100" style="overflow: hidden; min-height: 8rem;">
+                   <div  id="tutor-carousel" class="mw-100 carousel slide mb-6" data-bs-ride="carousel" style="min-height: 8rem;">
+                      <div class="carousel-indicators" style="margin-bottom: 0.7rem;">
+                         <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
+                         <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+                         <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+                         <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="3" aria-label="Slide 4" class=""></button>
+                         <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="4" aria-label="Slide 5" class=""></button>
+                         <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="5" aria-label="Slide 6" class=""></button>
+                      </div>
+                      <div class="carousel-inner" style="height: 8rem">
+                         <div class="carousel-item h-100 active">
+                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <div class="container">
+                               <div class="carousel-caption">
+                                  <h2>100% refund</h2>
+                                  <h6>
+                                  before second class/session
+                                  </h6 >
+                               </div>
+                            </div>
+                         </div>
+                         <div class="carousel-item h-100">
+                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <div class="container">
+                               <div class="carousel-caption">
+                                  <h2>
+                                  USACO Gold-Platinum Level Mentors
+                                  </h2 >
+                               </div>
+                            </div>
+                         </div>
+                         <div class="carousel-item h-100">
+                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <div class="container">
+                               <div class="carousel-caption text-end">
+                                  <h2>$15/hour</h2>
+                                  <h6>
+                                  any class, no catches.
+                                  </h6 >
+                               </div>
+                            </div>
+                         </div>
+                         <div class="carousel-item h-100">
+                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <div class="container">
+                               <div class="carousel-caption text-end">
+                                  <h3>3:1 student:teacher guaranteed</h3>
+                               </div>
+                            </div>
+                         </div>
+                         <div class="carousel-item h-100">
+                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <div class="container">
+                               <div class="carousel-caption">
+                                  <h1>Testimonial</h1>
+                                  <p class="opacity-75">Munir is so orz</p>
+                               </div>
+                            </div>
+                         </div>
+                         <div class="carousel-item h-100">
+                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                            </svg>
+                            <div class="container">
+                               <div class="carousel-caption text-end">
+                                  <h1>Testimonial</h1>
+                                  <p class="opacity-75">Max is so cute</p>
+                               </div>
+                            </div>
+                         </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#tutor-carousel" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#tutor-carousel" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                      </button>
+                   </div>
+                </div>
+            </div>
+            
             <div id="about-section" class="container my-5 text-end">
                 <div class="row">
                     <div class="col" style="min-width: 16em;">
