--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                             <div class="container">
                                <div class="carousel-caption">
                                   <h2>100% refund</h2>
-                                  <h6>
-                                  before second class/session
+                                  <h6 class="opacity-75">
+                                  if unsatisfactory before second session
                                   </h6 >
                                </div>
                             </div>
@@ -101,8 +101,8 @@
                             <div class="container">
                                <div class="carousel-caption">
                                   <h2>
-                                  USACO Gold-Platinum Level Mentors
-                                  </h2 >
+                                  USACO Platinum Level Mentors
+                                  </h2>
                                </div>
                             </div>
                          </div>
@@ -111,9 +111,9 @@
                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                             </svg>
                             <div class="container">
-                               <div class="carousel-caption text-end">
+                               <div class="carousel-caption">
                                   <h2>$15/hour</h2>
-                                  <h6>
+                                  <h6 class="opacity-75">
                                   any class, no catches.
                                   </h6 >
                                </div>
@@ -124,30 +124,11 @@
                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                             </svg>
                             <div class="container">
-                               <div class="carousel-caption text-end">
-                                  <h3>3:1 student:teacher guaranteed</h3>
-                               </div>
-                            </div>
-                         </div>
-                         <div class="carousel-item h-100">
-                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
-                            <div class="container">
                                <div class="carousel-caption">
-                                  <h1>Testimonial</h1>
-                                  <p class="opacity-75">Munir is so orz</p>
-                               </div>
-                            </div>
-                         </div>
-                         <div class="carousel-item h-100">
-                            <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
-                            <div class="container">
-                               <div class="carousel-caption text-end">
-                                  <h1>Testimonial</h1>
-                                  <p class="opacity-75">Max is so cute</p>
+                                  <h2>3 to 1</h2>
+                                  <h6 class="opacity-75">
+                                  student to teacher ratio
+                                  </h6>
                                </div>
                             </div>
                          </div>
