--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="container">
                 <div hidden class="card mw-100" style="overflow: hidden; min-height: 8rem;">
                    <div  id="tutor-carousel" class="mw-100 carousel slide mb-6" data-bs-ride="carousel" style="min-height: 8rem;">
-                      <div class="carousel-indicators" style="margin-bottom: 0.7rem;">
+                      <div class="carousel-indicators" style="margin-bottom: 0.2rem;">
                          <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
                          <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
                          <button type="button" data-bs-target="#tutor-carousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
@@ -112,7 +112,7 @@
                                <div class="carousel-caption">
                                   <h1>$15/hour</h1>
                                   <h6 class="opacity-75">
-                                  any class, no catches.
+                                  any class, no catches
                                   </h6 >
                                </div>
                             </div>
