--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                             </svg>
                             <div class="container">
-                               <div class="carousel-caption">
+                               <div class="caption">
                                   <h1>100% refund</h1>
                                   <h6 class="opacity-75">
                                   if unsatisfactory before second session
@@ -97,7 +97,7 @@
                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                             </svg>
                             <div class="container">
-                               <div class="carousel-caption">
+                               <div class="caption">
                                   <h2>
                                   USACO Platinum Level Mentors
                                   </h2>
@@ -109,7 +109,7 @@
                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                             </svg>
                             <div class="container">
-                               <div class="carousel-caption">
+                               <div class="caption">
                                   <h1>$15/hour</h1>
                                   <h6 class="opacity-75">
                                   any class, no catches
@@ -122,7 +122,7 @@
                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
                             </svg>
                             <div class="container">
-                               <div class="carousel-caption">
+                               <div class="caption">
                                   <h1>3 to 1</h1>
                                   <h6 class="opacity-75">
                                   student to teacher ratio
