--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
                                   <h2>
                                   USACO Platinum Level Mentors
                                   </h2>
+                                  <h6 class="opacity-75">
+                                  academic leaders from TJ
+                                  </h6 
                                </div>
                             </div>
                          </div>
