--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                             </svg>
                             <div class="container">
                                <div class="caption">
-                                  <h3>
-                                  USACO Platinum Level Mentors
-                                  </h3>
+                                  <h2>
+                                  Experienced Mentors
+                                  </h2>
                                   <h6 class="opacity-75">
-                                  academic leaders from TJ
+                                  USACO Platinum-Gold, academic leaders from TJ
                                   </h6 >
                                </div>
                             </div>
