--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                       <div class="carousel-inner" style="height: 8rem">
                          <div class="carousel-item h-100 active">
                             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                               <rect width="100%" height="100%" fill="navy"></rect>
                             </svg>
                             <div class="container">
                                <div class="carousel-caption">
@@ -94,7 +94,7 @@
                          </div>
                          <div class="carousel-item h-100">
                             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                               <rect width="100%" height="100%" fill="navy"></rect>
                             </svg>
                             <div class="container">
                                <div class="carousel-caption">
@@ -106,7 +106,7 @@
                          </div>
                          <div class="carousel-item h-100">
                             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                               <rect width="100%" height="100%" fill="navy"></rect>
                             </svg>
                             <div class="container">
                                <div class="carousel-caption">
@@ -119,7 +119,7 @@
                          </div>
                          <div class="carousel-item h-100">
                             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                               <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                               <rect width="100%" height="100%" fill="navy"></rect>
                             </svg>
                             <div class="container">
                                <div class="carousel-caption">
