--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </svg>
                             <div class="container">
                                <div class="caption">
-                                  <h1>100% refund</h1>
+                                  <h1>100% Refund</h1>
                                   <h6 class="opacity-75">
                                   if unsatisfactory before second session
                                   </h6 >
