--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             <a class="link-style-1-green" href="./tutoring.html" style="text-decoration: none;">Tutoring services</a>
                             available upon request - both online and in person.<br>
                             <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">Contact us</a> 
-                            if interested.
+                            for a free consultation.
                         </p>
                         <div class="row text-start">
                             <div class="col-lg-12">
