--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                <div class="caption">
                                   <h1>100% Refund</h1>
                                   <h6 class="opacity-75">
-                                  if unsatisfactory before second session
+                                  if unsatisfied by first session
                                   </h6 >
                                </div>
                             </div>
