--- a/tutoring.html
+++ b/tutoring.html
@@ -174,6 +174,10 @@
                         <a class="link-style-1-red" href="./about.html" style="text-decoration: none;">Learn more</a>
                         about our tutors.
                      </p>
+                     <p>
+                        <a class="link-style-1-purple" href="./contact.html" style="text-decoration: none;">Contact us</a> 
+                        for a free consultation.
+                     </p>
                   </div>
                   <div class="col-5" style="min-width: 25em;">
                      <div id="intro-alg-schedule" class="bs-component">
