changed incorrect link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <li><a href="./courses.html" class="dropdown-item text-dark">• courses</a></li>
                             <li><a href="./tutoring.html" class="dropdown-item text-dark">• tutoring</a></li>
                             <li><a href="./about.html" class="dropdown-item text-dark">• about</a></li>
-                            <li><a href="./contact.html" class="dropdown-item text-dark">• about</a></li>
+                            <li><a href="./contact.html" class="dropdown-item text-dark">• contact</a></li>
                         </ul>
                     </li>
                 </ul>
