--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
             
             <div id="about-section" class="container my-5 text-end">
-                <div class="row">
+                <div class="row" style="justify-content: center">
                     <div class="col" style="min-width: 16em;">
                         <h3>
                             <a class="link-style-2-blue link-style-2-reverse" href="./about.html" style="text-decoration: none; color: inherit;">
@@ -180,7 +180,7 @@
                     <a class="link-style-1-red" href="./tutoring.html" style="text-decoration: none;">online lessons</a>
                     taught by our four instructors.
                 </p>
-                <div class="row d-flex column-gap-0">
+                <div class="row d-flex column-gap-0" style="justify-content: center">
                     <div class="col-auto my-1" style="min-height: 100%">
                         <div class="card h-100" style="min-width: 16em">
                             <div class="card-body">
@@ -272,7 +272,7 @@
             </div>
 
             <div id="tutoring-section" class="container my-5 text-end" style="padding-top:0.25rem;">
-                <div class="row">
+                <div class="row" style="justify-content: center">
                     <div class="col-6" style="min-width: 16em">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
                             <img class="card-img" src="./static/assets/lecture.png" alt="lecture-image">
