--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             
             <div id="about-section" class="container my-5 text-end">
                 <div class="row" style="justify-content: center">
-                    <div class="col" style="min-width: 18em;">
+                    <div class="col" style="min-width: 16em;">
                         <h3>
                             <a class="link-style-2-blue link-style-2-reverse" href="./about.html" style="text-decoration: none; color: inherit;">
                                 who we are <<<
@@ -161,7 +161,7 @@
                             We hope that our courses will provide an affordable way for students of any age to prepare themselves for further math and computer science learning, as well as a way to get into the lucrative field of artificial intelligence and machine learning.
                         </p>  
                     </div>
-                    <div class="col-5" style="min-width:18em;">
+                    <div class="col-5" style="min-width:16em;">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
                             <img class="card-img" src="./static/assets/battlecode.jpg" alt="lecture-image">
                         </div>
@@ -180,7 +180,7 @@
                     <a class="link-style-1-red" href="./tutoring.html" style="text-decoration: none;">online lessons</a>
                     taught by our four instructors.
                 </p>
-                <div class="row d-flex column-gap-0" style="justify-content: center">
+                <div class="row d-flex column-gap-0" style="justify-content: center; hyphens: auto;">
                     <div class="col-auto my-1" style="min-height: 100%">
                         <div class="card h-100" style="min-width: 18em">
                             <div class="card-body">
@@ -226,7 +226,7 @@
                     </div>
 
                     <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 16em">
+                        <div class="card h-100" style="min-width: 18em">
                             <div class="card-body px-4">
                                 <h5 class="card-title">
                                     Algorithms and Data Structures 
@@ -248,7 +248,7 @@
                     </div>
 
                     <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 16em">
+                        <div class="card h-100" style="min-width: 18em">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Intro to Artificial Intelligence
