--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     taught by our four instructors.
                 </p>
                 <div class="row d-flex column-gap-0" style="justify-content: center; hyphens: auto;">
-                    <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 18em">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%;">
+                        <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Algebra
@@ -203,8 +203,8 @@
                         </div>
                     </div>
                      
-                    <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 18em">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%;">
+                        <div class="card h-100" style="min-width: 100%>
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Intro to Python 
@@ -225,8 +225,8 @@
                         </div>
                     </div>
 
-                    <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 18em">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%;">
+                        <div class="card h-100" style="min-width: 100%">
                             <div class="card-body px-4">
                                 <h5 class="card-title">
                                     Algorithms and Data Structures 
@@ -247,8 +247,8 @@
                         </div>
                     </div>
 
-                    <div class="col-auto my-1" style="min-height: 100%">
-                        <div class="card h-100" style="min-width: 18em">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%;">
+                        <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Intro to Artificial Intelligence
