--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
                      
                     <div class="col-auto my-1" style="min-height: 100%; width: 85%;">
-                        <div class="card h-100" style="min-width: 100%>
+                        <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     Intro to Python 
