--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     taught by our four instructors.
                 </p>
                 <div class="row d-flex column-gap-0" style="justify-content: center; hyphens: auto;">
-                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: 40vh;">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: min(45vh, 21em);">
                         <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
                                 <h5 class="card-title">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                      
-                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: 40vh;">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: min(45vh, 21em);">
                         <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
                                 <h5 class="card-title">
@@ -225,7 +225,7 @@
                         </div>
                     </div>
 
-                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: 40vh;">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: min(45vh, 21em);">
                         <div class="card h-100" style="min-width: 100%">
                             <div class="card-body px-4">
                                 <h5 class="card-title">
@@ -247,7 +247,7 @@
                         </div>
                     </div>
 
-                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: 40vh;">
+                    <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: min(45vh, 21em);">
                         <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
                                 <h5 class="card-title">
