--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             
             <div id="about-section" class="container my-5 text-end">
                 <div class="row" style="justify-content: center">
-                    <div class="col" style="min-width: 16em;">
+                    <div class="col" style="min-width: 55%;">
                         <h3>
                             <a class="link-style-2-blue link-style-2-reverse" href="./about.html" style="text-decoration: none; color: inherit;">
                                 who we are <<<
@@ -161,7 +161,7 @@
                             We hope that our courses will provide an affordable way for students of any age to prepare themselves for further math and computer science learning, as well as a way to get into the lucrative field of artificial intelligence and machine learning.
                         </p>  
                     </div>
-                    <div class="col-5" style="min-width:16em;">
+                    <div class="col-5" style="max-width: 50em; min-width:20em; flex-grow: 0.8;">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
                             <img class="card-img" src="./static/assets/battlecode.jpg" alt="lecture-image">
                         </div>
