--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
 
             <div id="tutoring-section" class="container my-5 text-end" style="padding-top:0.25rem;">
                 <div class="row" style="justify-content: center">
-                    <div class="col-6" style="min-width: 16em">
+                    <div class="col-6" style="max-width: 50em; min-width:20em; flex-grow: 0.8;">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
                             <img class="card-img" src="./static/assets/lecture.png" alt="lecture-image">
                         </div>
                         <br><br>
                     </div>
-                    <div class="col" style="min-width: 16em">
+                    <div class="col" style="min-width: 50%">
                         <h3>
                             <a class="link-style-2-green link-style-2-reverse" href="./tutoring.html" style="text-decoration: none; color: inherit;">
                                 tutoring <<<
