--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
                 </div>
             </div>
             
-            <div id="about-section" class="container my-5 text-end">
+            <div id="about-section" class="container my-5">
                 <div class="row" style="justify-content: center">
                     <div class="col" style="min-width: 55%;">
                         <h3>
                             <a class="link-style-2-blue link-style-2-reverse" href="./about.html" style="text-decoration: none; color: inherit;">
-                                who we are <<<
+                                >>> who we are
                             </a>
                         </h3>
                         <p>
@@ -169,10 +169,10 @@
                 </div>
             </div>
 
-            <div id="courses-section" class="container my-5">
+            <div id="courses-section" class="container my-5 text-end">
                 <h3>
                     <a class="link-style-2-red" href="./courses.html" style="text-decoration: none; color: inherit;">
-                        >>> courses
+                        courses <<<
                     </a>
                 </h3>
                 <p>
@@ -180,7 +180,7 @@
                     <a class="link-style-1-red" href="./tutoring.html" style="text-decoration: none;">online lessons</a>
                     taught by our four instructors.
                 </p>
-                <div class="row d-flex column-gap-0" style="justify-content: center; hyphens: auto;">
+                <div class="row d-flex column-gap-0 text-start" style="justify-content: center; hyphens: auto;">
                     <div class="col-auto my-1" style="min-height: 100%; width: 85%; max-width: min(45vh, 20em);">
                         <div class="card h-100" style="min-width: 100%">
                             <div class="card-body">
@@ -271,7 +271,7 @@
                 </div>                
             </div>
 
-            <div id="tutoring-section" class="container my-5 text-end" style="padding-top:0.25rem;">
+            <div id="tutoring-section" class="container my-5" style="padding-top:0.25rem;">
                 <div class="row" style="justify-content: center">
                     <div class="col-6" style="max-width: 50em; min-width:20em; flex-grow: 0.8;">
                         <div class="card user-select-none" style="min-width: 100%; overflow:hidden">
@@ -282,7 +282,7 @@
                     <div class="col" style="min-width: 50%">
                         <h3>
                             <a class="link-style-2-green link-style-2-reverse" href="./tutoring.html" style="text-decoration: none; color: inherit;">
-                                tutoring <<<
+                                >>> tutoring 
                             </a>
                         </h3>
                         <p>
