--- a/courses.html
+++ b/courses.html
@@ -104,7 +104,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Pricing</h3>
                             <p>
-                                $15 / hour, for any class, no catches. We try to price at an extremely affordable rate. If you require financial aid, please let us know and we can discuss.
+                                $15 / hour, for any class. We offer a free trial: you can receive a full refund if the first class is unsatisfactory. Contact us if financial aid is needed. 
                             </p>
                         </div>
                     </div>                    
