--- a/tutoring.html
+++ b/tutoring.html
@@ -179,7 +179,7 @@
                         for a free consultation.
                      </p>
                   </div>
-                  <div class="col-5" style="min-width: 25em;">
+                  <div class="col-5" style="width: 90%;">
                      <div id="intro-alg-schedule" class="bs-component">
                         <table class="table table-striped table-bordered">
                            <thead class="thead-dark">
