--- a/tutoring.html
+++ b/tutoring.html
@@ -49,11 +49,16 @@
             </ul>
          </div>
       </header>
+
+      <div id="banner" class="w-100 text-center py-2 bg-danger" style="position: fixed; top: 4rem; z-index: 1; opacity: 0.8; color: white;">
+         <a class="link-style-1-yellow" href="https://forms.gle/dLoHaA2ahPga7ZqPA" style="text-decoration: none;">Register</a> today to try the first class free of charge!
+     </div>
+
       <div class="container-fluid">
          <div id="home-top" class="row">
             <div class="jumbotron jumbotron-fluid" style="margin-top: 7rem">
                <div class="container">
-                  <h1 class="display-6" style="margin-bottom: 0.5rem;">tutoring</h1>
+                  <h1 class="display-6" style="margin-bottom: 0.5rem; margin-top: 1rem;">tutoring</h1>
                   <p class="lead fs-6">Our knowledgable instructors can tutor everything from chemistry to electronics!</p>
                </div>
             </div>
