--- a/courses.html
+++ b/courses.html
@@ -108,7 +108,7 @@
                         <div>
                             <h3 class="fw-bold mb-0 fs-5 text-body-emphasis">Pricing</h3>
                             <p>
-                                $15 / hour, for any class. We offer a free trial: you can receive a full refund if the first class is unsatisfactory. Contact us if financial aid is needed. 
+                                $15 / hour, for any class. We offer a free trial: students can attend the first class for free. Contact us if financial aid is needed. 
                             </p>
                         </div>
                     </div>                    
