--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <p>
                     <b><u>Organization contacts:</u></b><br>
-                    <b>Email:</b> tuturing@tuturing.net <br>
+                    <b>Email:</b> tuturing@tuturing.net (.net, NOT .org)<br>
                     <b>Phone:</b> (571) 201-1499 <br>
                     <b>Hours:</b> 10AM - 7PM EST
                 </p>
