--- a/tutoring.html
+++ b/tutoring.html
@@ -406,7 +406,7 @@
                               <tbody>
                                  <tr class="table-secondary">
                                     <th class="py-2" scope="row">SAT / PSAT</th>
-                                    <td class="py-2">Johnny, Max <span class="help-tip" data-help-tip="Tutors scored 1580 on the SAT">?</span></td>
+                                    <td class="py-2">Munir, Johnny, Max <span class="help-tip" data-help-tip="Tutors scored 1570-1580 on the SAT">?</span></td>
                                  </tr>
                                  <tr class="table-secondary">
                                     <th class="py-2" scope="row">Cambridge TMUA / STEP</th>
