--- a/courses.html
+++ b/courses.html
@@ -379,7 +379,7 @@
                                                     Students taking this course should have experience with coding and knowledge of basic data structures. Taking our other courses is a good way to meet these requirements.
                                                 </i>
                                                 <br><br>
-                                                <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
+                                                <a class="link-style-1-blue" href="./syllabus/AI.pdf" style="text-decoration: none;">Class Syllabus</a>
                                                 <br><br>
                                             </p>
                                         </div>
