--- a/courses.html
+++ b/courses.html
@@ -191,7 +191,7 @@
                                                 
                                                 Course material covers the standard middle school Algebra curriculum and useful tips and tricks used in the AMC.  
                                                 <br><br>
-                                                <a hidden class="link-style-1-blue" href="./about.html" style="text-decoration: none;">Class Schedule</a>
+                                                <a class="link-style-1-blue" href="./syllabus/Algebra.pdf" style="text-decoration: none;">Class Syllabus</a>
                                             </p>
                                         </div>
                                     </div>
