--- a/about.html
+++ b/about.html
@@ -29,8 +29,12 @@
                     </li>
 
                     <li class="nav-item d-none d-md-block">
-                        <a href="./tutoring.html" class="nav-link text-dark">• tutoring</a>
+                        <a href="./register.html" class="nav-link text-dark">• register</a>
                     </li>
+
+                    <!-- <li class="nav-item d-none d-md-block">
+                        <a href="./tutoring.html" class="nav-link text-dark">• tutoring</a>
+                    </li> -->
 
                     <li class="nav-item d-none d-md-block active">
                         <a href="./about.html" class="nav-link text-dark active">• about</a>
@@ -49,7 +53,8 @@
                         <ul class="dropdown-menu" style="transform: translateX(-50%)">
                             <li><a href="./index.html" class="dropdown-item text-dark">• home</a></li>
                             <li><a href="./courses.html" class="dropdown-item text-dark">• courses</a></li>
-                            <li><a href="./tutoring.html" class="dropdown-item text-dark">• tutoring</a></li>
+                            <li><a href="./register.html" class="dropdown-item text-dark">• register</a></li>
+                            <!-- <li><a href="./tutoring.html" class="dropdown-item text-dark">• tutoring</a></li> -->
                             <li><a href="./about.html" class="dropdown-item text-dark">• about</a></li>
                             <li><a href="./contact.html" class="dropdown-item text-dark">• contact</a></li>
                         </ul>
@@ -59,8 +64,8 @@
         </header>
 
         <div id="banner" class="w-100 text-center py-2 bg-danger" style="position: fixed; top: 4.2rem; z-index: 1; opacity: 0.8; color: white;">
-            <a class="link-style-1-yellow" href="https://forms.gle/dLoHaA2ahPga7ZqPA" style="text-decoration: none;">Register</a> today to try the first class free of charge!
-        </div>
+            <a class="link-style-1-yellow" href="./register.html" style="text-decoration: none;">Register</a> before 8/24/2024 for a $30 discount!
+        </div> 
         
         <div class="container-fluid">
             <div id="home-top" class="row">
