--- a/tutoring.html
+++ b/tutoring.html
@@ -25,9 +25,9 @@
                <li class="nav-item d-none d-md-block">
                   <a href="./courses.html" class="nav-link text-dark">• courses</a>
                </li>
-               <li class="nav-item d-none d-md-block active">
+               <!-- <li class="nav-item d-none d-md-block active">
                   <a href="./tutoring.html" class="nav-link text-dark active">• tutoring</a>
-               </li>
+               </li> -->
                <li class="nav-item d-none d-md-block">
                   <a href="./about.html" class="nav-link text-dark">• about</a>
                </li>
@@ -41,7 +41,7 @@
                   <ul class="dropdown-menu" style="transform: translateX(-50%)">
                      <li><a href="./index.html" class="dropdown-item text-dark">• home</a></li>
                      <li><a href="./courses.html" class="dropdown-item text-dark">• courses</a></li>
-                     <li><a href="./tutoring.html" class="dropdown-item text-dark">• tutoring</a></li>
+                     <!-- <li><a href="./tutoring.html" class="dropdown-item text-dark">• tutoring</a></li> -->
                      <li><a href="./about.html" class="dropdown-item text-dark">• about</a></li>
                      <li><a href="./contact.html" class="dropdown-item text-dark">• contact</a></li>
                   </ul>
